fixed wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -415,7 +415,7 @@ input[type=checkbox] {
   text-align: center;
   font-size: 60px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -424,6 +424,7 @@ input[type=checkbox] {
 }
 @media only screen and (min-width: 768px) {
   .user {
+    flex-direction: row;
     flex-wrap: nowrap;
     font-size: 75px;
   }
