--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -25,13 +25,14 @@
   text-align: center;
   font-size: 60px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
   p {
     font-size: 16px;
   }
   @media only screen and (min-width: $cut) {
+    flex-direction: row;
     flex-wrap: nowrap;
     font-size: 75px;
   }
